--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ xgboost==2.0.3
 # High-performance framework for building the prediction API
 fastapi==0.111.0
 # ASGI server to run the FastAPI application
-uvicorn[standard]==0.30.1
+uvicorn==0.30.1
 # For parsing model inputs in FastAPI
 pydantic==2.7.4
 
